# smart-library-platform

./: .cursorrules  .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_core_schema.py  002_catalog_schema.py  003_circulation_schema.py  004_book_copy_retired_status.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  db_errors.py  logging.py  security.py
backend/app/db/: catalog_categories.py  import_catalog.py  open_library_client.py  seed.py
backend/app/models/: __init__.py  author.py  base.py  book.py  book_author.py  book_category.py  book_copy.py  category.py  department.py  fine.py  language.py  publisher.py  reservation.py  role.py  transaction.py  user.py
backend/app/repositories/: auth_repository.py  author_repository.py  base.py  book_copy_repository.py  book_repository.py  category_repository.py  circulation_repository.py  dashboard_repository.py  department_repository.py  fine_repository.py  language_repository.py  (+5 more)
backend/tests/: conftest.py  conftest_circulation.py  test_admin_users_departments.py  test_auth.py  test_book_copy_lifecycle.py  test_catalog_book_copies.py  test_catalog_books.py  test_catalog_categories.py  test_catalog_languages.py  test_catalog_publishers.py  test_circulation_hardening.py  test_circulation_issue_return.py  test_circulation_rbac.py  test_circulation_reservations.py  test_dashboard.py  test_health.py  test_import_catalog.py  test_reservation_queue_awareness.py
docs/: setup.md  (+10 more)
(+135 files in other folders)
